- ObjectGraphs.java: Remove unused mergeMaps() - ObjectGraphs.java: Tweak mergeObjects()